--- a/index.html
+++ b/index.html
@@ -85,10 +85,8 @@
 
             </div>
             <div class="about__right">
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloremque, vel?</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia, fugiat.</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam, distinctio.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum, numquam!</p>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio tenetur porro voluptatibus atque consectetur facere. Ex quas doloremque mollitia cupiditate.</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae reiciendis commodi architecto iusto, eos aperiam! Saepe eum deleniti odio atque?</p>
             </div>
         </div>
     </section>
